# Reusable-Firmware-Development

./: .gitignore  README.md
1_GeneralPurbose_IO/: CMakeLists.txt  Doxyfile  main.c
1_GeneralPurbose_IO/GPIO_HAL/: GPIO.c  GPIO.h  GPIO_config.c  GPIO_config.h
1_GeneralPurbose_IO/html/: GPIO_8c.html  GPIO_8c__incl.md5  GPIO_8h_source.html  GPIO__config_8h_source.html  annotated.html  dir_0359315edb95df3e38ede7d7a7d90b20.html  dir_0523b5811cd41a529beb75fc3d42835a_dep.map  dir_05ea2e3e9cdc5eaf3ad0b43b1a87a6f0_dep.map  dir_06a616c564f153c9da7bd5604cf5873b_dep.md5  dir_0c7474cab11111ababbd41c0cacc8f58.html  dir_0c7474cab11111ababbd41c0cacc8f58_dep.map  dir_0c7474cab11111ababbd41c0cacc8f58_dep.md5  dir_0c83ab4f3b0ca1329fcfdf7dd709dac0.html  dir_0c83ab4f3b0ca1329fcfdf7dd709dac0_dep.map  dir_0c83ab4f3b0ca1329fcfdf7dd709dac0_dep.md5  dir_10a4755cc94c8ceadef531f59c95df27.html  dir_10a4755cc94c8ceadef531f59c95df27_dep.map  dir_10a4755cc94c8ceadef531f59c95df27_dep.md5  dir_13b7cabd3dd619b4f34e1258646d0565_dep.md5  dir_13e269dffd47d8913f577ade3b1bb2fc_dep.map  dir_147cdf7eaab9d548da0e881cee982470_dep.map  dir_15c6cd80163695e35bd754a935e436b2.html  dir_1876310855e0821a58deacd20d68ffba_dep.md5  dir_1b90c12928abad4d1080bf7feb6d3da9.html  dir_1b90c12928abad4d1080bf7feb6d3da9_dep.map  dir_1d5163175d1941a528b93e4c33874a7f.html  dir_1d5163175d1941a528b93e4c33874a7f_dep.md5  dir_207dd737ee89aed5bafedd02c412d559_dep.md5  dir_213536be7cf86b9859ec7756da0234e7.html  dir_22a4379de48020c3c73cd510175ffa9b_dep.md5  dir_2453a1d0feaaf6dd3ecf7d75de2ddb4a_dep.md5  dir_28f9cebf39de44daa81a15271e2314de.html  dir_28f9cebf39de44daa81a15271e2314de_dep.md5  dir_2d3cfa1ab3ae971a49cd9af62081f056.html  dir_2d3cfa1ab3ae971a49cd9af62081f056_dep.map  dir_2d3cfa1ab3ae971a49cd9af62081f056_dep.md5  dir_2fe6f25edcbfc49eec2fd5bb29839bcc_dep.map  dir_30667ce83555df6e4d30e40835094694.html  dir_30667ce83555df6e4d30e40835094694_dep.map  dir_32d38752a0143070e47b48950e805b7b.html  (+201 more)
1_GeneralPurbose_IO/latex/: GPIO_8h_source.tex  GPIO__config_8h_source.tex  annotated.tex  refman.tex  structGPIOConfig__t.tex
1_GeneralPurbose_IO_structRegs/: CMakeLists.txt  main.c
1_GeneralPurbose_IO_structRegs/GPIO_HAL/: GPIO.c  GPIO.h  GPIO_config.c  GPIO_config.h  GPIO_regs.h
1_GeneralPurbose_IO_structRegs/html/: GPIO_8c__incl.map  classes.html  dir_0359315edb95df3e38ede7d7a7d90b20_dep.map  dir_0359315edb95df3e38ede7d7a7d90b20_dep.md5  dir_04c7b6d871d2f06d98ad0431894c8274.html  dir_0523b5811cd41a529beb75fc3d42835a.html  (+240 more)
2_GeneralPurbose_SPI/: CMakeLists.txt  main.c
2_SPI_StructOfRegisters/: CMakeLists.txt  main.c  tm4c123gh6pm_startup_ccs_gcc.c
3_CAN_StructOfRegisters/: CMakeLists.txt
3_CAN_StructOfRegisters/CAN_HAL/Dynamic/: CAN_configs.h
3_CAN_StructOfRegisters/CAN_HAL/Static/: CAN.h  CAN_datatypes.h  CAN_regs.h
3_CAN_StructOfRegisters/SysCtl/: SysCtl_Registers.h
(+257 files in other folders)
